Updated bio and extracurriculars

--- a/html/extracurriculars.html
+++ b/html/extracurriculars.html
@@ -59,45 +59,45 @@
                 <div class="portfolio-hover-magenta">
                   <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                 </div>
-                <img class="extracurriculars-logo" src="../images/extracurriculars/logo/aiaa.png" alt="..." />
+                <img class="extracurriculars-logo" src="../images/extracurriculars/logo/HI&D_Logo.jpeg" alt="..." />
               </a>
               <div class="portfolio-caption-magenta">
-                <div class="portfolio-caption-heading">SCU AIAA</div>
-                <div class="portfolio-caption-subheading">September 2022 - June 2023</div>
+                <div class="portfolio-caption-heading">SCU Healthcare Innovation and Design</div>
+                <div class="portfolio-caption-subheading">October 2023 - Present</div>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-sm-6 mb-4">
+          <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
             <!-- Portfolio item 3-->
             <div class="portfolio-item">
               <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
                 <div class="portfolio-hover-purple">
                   <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                 </div>
-                <img class="extracurriculars-logo" src="../images/extracurriculars/logo/bronco racing .png" alt="..." />
-              </a>
-              <div class="portfolio-caption-purple">
-                <div class="portfolio-caption-heading">SCU Formula SAE</div>
-                <div class="portfolio-caption-subheading">September 2022 - Present</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-            <!-- Portfolio item 4-->
-            <div class="portfolio-item">
-              <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
-                <div class="portfolio-hover-yellow">
-                  <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                </div>
                 <img class="extracurriculars-logo" src="../images/extracurriculars/logo/bmes.png" alt="..." />
               </a>
-              <div class="portfolio-caption-yellow">
+              <div class="portfolio-caption-purple">
                 <div class="portfolio-caption-heading">SCU BMES</div>
                 <div class="portfolio-caption-subheading">September 2022 - Present</div>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
+            <!-- Portfolio item 4-->
+          <div class="portfolio-item">
+            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
+              <div class="portfolio-hover-yellow">
+                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+              </div>
+              <img class="extracurriculars-logo" src="../images/extracurriculars/logo/aiaa.png" alt="..." />
+            </a>
+            <div class="portfolio-caption-yellow">
+              <div class="portfolio-caption-heading">SCU AIAA</div>
+              <div class="portfolio-caption-subheading">September 2022 - June 2023</div>
+            </div>
+          </div>
+        </div>
+          <div class="col-lg-4 col-sm-6 mb-4">
             <!-- Portfolio item 5-->
             <div class="portfolio-item">
               <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
@@ -143,14 +143,22 @@
                 <div class="modal-body">
                   <!-- Project details-->
                   <h2 class="text-uppercase hci-heading">Human Computer Interaction LAb</h2>
-                  <p class="item-intro text-muted">Javascript Developer</p>
-                  <img class="img-fluid d-block mx-auto" src="../images/extracurriculars/images/hci-collage-2.png" alt="..." />
-                  <p>In the HCI Lab, I am a javascript developer collaborating with a team under Professor Lukoff to build an AR tour 
-                    of the Santa Clara University campus highlighting Ohlone history on the land and present advocacy. Here, I have
-                    prototyped, developed, and tested location-based AR experiences, map features to support navigation, and 
-                    introduction and loading screens using 8th Wall and A-Frame framework, which involves scanning locations 
-                    and optimizing models.
+                  <p class="item-intro text-muted">Unity and Javascript Developer</p>
+                  <img class="img-fluid d-block mx-auto" src="../images/extracurriculars/images/hci-collage.png" alt="..." />
+                  <p>In the HCI Lab, I am a  developer collaborating with a team under Professor Lukoff to build an AR tour 
+                    of the Santa Clara University campus highlighting Ohlone history and culture on the land.
+                    We previously developed a web-AR version of the tour using <b>8th Wall, HTML, CSS, Javascript, and A-Frame</b>
+                    before transitioning to create an app version of the tour using <b>Unity, C#, Lightship VPS, and ARFoundation</b>.
+                    On both platforms, I designed, developed, and tested location-based AR experiences, map features to support navigation, 
+                    onboarding screens, live captions that sync with the narration, and scanning popups. 
+                    <br>
+                    <br>
+                    Some highlights from the projects include being a <b>finalist for Best Societal Impact at the 2024 Auggie Awards</b>
+                    and being the <b>Grand Prize Winner of Niantic's 8th Wall Explore Together Challenge</b>.
                   </p>
+                  <button class="btn btn-primary-yellow btn-xl text-uppercase" onclick="window.open('https://scuhci.com/ohlone-ar/');" type="button">
+                    View Project Website
+                  </button>
                 </div>
               </div>
             </div>
@@ -158,8 +166,39 @@
         </div>
       </div>
     </div>
-    <!-- AIAA popup-->
+    <!-- FSAE popup-->
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-bs-dismiss="modal"><img src="../images/extracurriculars/close-icon.svg" alt="Close modal" /></div>
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <div class="modal-body">
+                  <!-- Project details-->
+                  <h2 class="text-uppercase fsae-heading">SCU Healthcare Innovation and Design Lab</h2>
+                  <p class="item-intro text-muted">Research Assisstant</p>
+                  <img class="img-fluid d-block mx-auto" src="../images/extracurriculars/images/HI&D.png" alt="..." />
+                  <p>As a research assisstant in the Healthcare Innovation and Design Lab under Dr. Akbari,
+                    I have worked on applying interpretability techniques like Grad-CAM to breast cancer detection
+                    models. This includes performing literature view on machine learning interpretability, CNNs
+                    and Transformers, and breast cancer image analysis, in addition to writing code to train 
+                    a VGG model on both ultrasound and mammogram images and apply Grad-CAM to visualize important regions
+                    in the images.
+                  </p>
+                  <!-- <button class="btn btn-primary-purple btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                    Close Project
+                  </button> -->
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <!-- AIAA popup-->
+    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-bs-dismiss="modal"><img src="../images/extracurriculars/close-icon.svg" alt="Close modal" /></div>
@@ -171,10 +210,10 @@
                   <h2 class="text-uppercase aiaa-heading">SCU American Institute of Aeronautics and Astronautics</h2>
                   <p class="item-intro text-muted">Electrical Team Member</p>
                   <img class="img-fluid d-block mx-auto" src="../images/extracurriculars/images/AIAA-collage.png" alt="..." />
-                  <p>I am a part of the electrical team participating in the Cansat Competition's Planetary Probe 
-                    Lander Mission, where we work towards building a container that can be launched about 700 meters 
+                  <p>I was a part of the electrical team participating in the Cansat Competition's Planetary Probe 
+                    Lander Mission, where we worked towards building a container that can be launched about 700 meters 
                     into the air, release a probe with a heat shield and parachute, decend at a specified rate, and 
-                    raise a flag once the probe has landed. So far, I have researched and selected sensors, selected 
+                    raise a flag once the probe has landed. Personally, I have researched and selected sensors, selected 
                     communication and data handling components, planned out our ground control design, documented
                     software telemetry format, designed the electrical subsystem testing plan, and created the electrical 
                     power block diagram.
@@ -189,7 +228,8 @@
         </div>
       </div>
     </div>
-    <!-- FSAE popup-->
+    
+    <!-- BMES popup-->
     <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -199,42 +239,13 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase fsae-heading">SCU Formula SAE</h2>
-                  <p class="item-intro text-muted">Data Collection Lead</p>
-                  <!-- <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpg" alt="..." /> -->
-                  <p>I am a part of Bronco Racing's, SCU's Formula SAE team, electrical team as we work to build a 
-                    formula-style electric car.  More specifically, I am a part of the Printed Circuit Board subteam, 
-                    where I have researched and documented notes about PCB design, watched tutorials and attended
-                    workshops to learn how to use Altium, and researched safety.  I am also a part of the Data 
-                    Collection subteam, where I've organized a list of the data to collect and researched sensors.
-                  </p>
-                  <!-- <button class="btn btn-primary-purple btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                    Close Project
-                  </button> -->
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- BMES popup-->
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="close-modal" data-bs-dismiss="modal"><img src="../images/extracurriculars/close-icon.svg" alt="Close modal" /></div>
-          <div class="container">
-            <div class="row justify-content-center">
-              <div class="col-lg-8">
-                <div class="modal-body">
-                  <!-- Project details-->
                   <h2 class="text-uppercase bmes-header">SCU Biomedical Engineering Society</h2>
-                  <p class="item-intro text-muted">Social Media Co-Chair</p>
+                  <p class="item-intro text-muted">Vice President.</p>
                   <img class="img-fluid d-block mx-auto" src="../images/extracurriculars/images/bmes-collage.png" alt="..." />
-                  <p>In BMES, I am working on project to write code that can analyze EEG waves to predict sleep stage
-                     using neural networks and fourier transform. As a freshman representative, I also redesigned the 
-                     website and discuss event plans, such as alumni panels, information sessions, and socials, with 
-                     the rest of the board.
+                  <p>As vice president, I help the president lead board meetings and check in with board members
+                    to plan and promote weekly events and other professional development opportunities. As a freshman,
+                    I also worked on project to analyze EEG waves to predict sleep stage using neural networks and fourier transform. 
+                    In previous years, I was also a freshman representative and social-media co-chair.
                   </p>
                   <!-- <button class="btn btn-primary-yellow btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                     View My EEG Project
@@ -260,14 +271,18 @@
                   <p class="item-intro text-muted">Programming Committee Lead</p>
                   <img class="img-fluid d-block mx-auto" src="../images/extracurriculars/images/frc-collage.png" alt="..." />
                   <p> In FRC Robotics, I worked with a team to build a robot that is about 100lbs with different mechanism to 
-                    compete a different game each year. As a programming lead, I coordinated programming subgrounds, communicated
-                    design plans with other committees, and worked with mentors. In terms of code, I also wrote and troubleshot  
+                    compete a different game each year.  Throughout my time on the team, I wrote and troubleshot  
                     code for various mechanisms, including autonomous, chassis, flywheel with different shooting speeds, vision,
                     a turret that can turn both manually and automatically, and manual and automated climb.  This included
                     coding motors, encoders, gyros, limelight, color sensors, pneumatics, and more in<span class="magenta-concept">
-                    C++</span> and <span class="magenta-concept">Java</span>.  Outside of programming, I also planned and lead 
+                    C++</span> and <span class="magenta-concept">Java</span>.  
+                    <br> <br>
+                    In addition, as a programming lead, I coordinated programming subgrounds, communicated
+                    design plans with other committees, and worked with mentors. Outside of programming, I also planned and lead 
                     Chassis in a Day, Kickoff, the Young Women Engineering Symposium, workshops on Arduino and Driving, a module 
-                    to introduce 26 students to programming, and award submissions. Highlights of our season include winning the 
+                    to introduce 26 students to programming, and award submissions.
+                    <br> <br>
+                    Highlights of our season include winning the 
                     2021 Calgames <span class="magenta-concept">Innovation Award</span> for our vision system and the 2022 Silicon 
                     Valley Regional <span class="magenta-concept">Judge's Award</span> for general robot design and outreach.
                   </p>
@@ -302,7 +317,6 @@
                     analysis</span>, and the website the Air Canvas was hosted on was programmed using <span class="purple-concept">HTML, 
                     CSS, and Flask</span>.
                   </p>
-                  <!-- TODO: view github option -->
                   <button class="btn btn-primary-purple btn-xl text-uppercase" onclick="window.open('https://github.com/TiffanyN22/Air-Canvas');" type="button">
                     View Air Canvas on Github
                   </button>
