--- a/index.html
+++ b/index.html
@@ -104,11 +104,12 @@
           
           </script>
 
-        <p class="bio"> I am a sophomore majoring in Computer Science 
-          and Engineering at Santa Clara University. With experience in robotics, augmented 
-          reality, web development, and artificial intelligence, I am passionate about working on 
-          projects that allow me to learn more about emerging technologies and see all different 
-          ways computer science can be applied to help others! </p>
+        <p class="bio"> 
+          I am a junior majoring in computer science and engineering and minoring in bioengineering at 
+          Santa Clara University. With experience in both frontend and backend web and app development,
+          API development, augmented reality, artificial intelligence, and robotics, I am passionate about 
+          applying my software skills to bioengineering problems, especially as it relates to pharmaceuticals, 
+          imaging, and robotics, though I am also interested in exploring other forms of emerging technology.</p>
       </div>
       <!-- TODO: change image -->
       <img class="profile-image" src="images/main-page/profile.png">
