--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 
         <p class="bio"> 
           I am a junior majoring in computer science and engineering and minoring in bioengineering at 
-          Santa Clara University. With experience in both frontend and backend web and app development,
+          Santa Clara University. With experience in full-stack web and app development,
           API development, augmented reality, artificial intelligence, and robotics, I am passionate about 
-          applying my software skills to bioengineering problems, especially as it relates to pharmaceuticals, 
-          imaging, and robotics, though I am also interested in exploring other forms of emerging technology.</p>
+          applying my software skills to bioengineering problems, especially as it relates to imaging, data visualization,
+          simulations, and web development, though I also enjoy exploring other forms of emerging technology.</p>
       </div>
       <!-- TODO: change image -->
       <img class="profile-image" src="images/main-page/profile.png">
