Added Ascend project

--- a/html/projects.html
+++ b/html/projects.html
@@ -24,6 +24,44 @@
     <h1 class="coding-projects-heading"> Coding Projects </h1>
 
     <section>
+      <!--Ascend Project -->
+      <div class="myGov-container">
+        <div class="app-container">
+          <img class="img1" src="../images/projects/ascend homescreen.png">
+          <img class="img2" src="../images/projects/ascend data visualization.png">
+        </div>
+        <div class="project-text">
+          <p class="most-likely-to-heading">Ascend</p>
+          <p class="project-description">
+            This website helps freelancers with contract negotiations by creating market analysis
+            visualizations for their industry and location, summarizing the main points in lengthy contracts,
+            and automatically drafting negotiation emails with AI. 
+            <br> 
+            I was in charge of developing the majority of the frontend in <span class="myGov-concepts">React.js</span>, 
+            creating data visualization with <span class="myGov-concepts">matplotlib</span> by retriving data from the
+            <span class="myGov-concepts">CarreerOneStop API</span> using <span class="myGov-concepts">Flask</span>, 
+            storing user data in <span class="myGov-concepts">AWS S3</span>, and integrating the frontend and backend.
+
+            This website won  <span class="myGov-concepts">3rd place</span> for the main AWS AI track in SCU ACM's 2024 AWS-Inrix 
+            Hackathon.
+          </p>
+          <div class="project-button-container">
+            <button  class="myGov-github-button" onclick="window.open('https://github.com/TiffanyN22/AWS_Hack_2024');">
+              <div class="button-text-container">
+                <i class="fa-brands fa-github"></i>
+                <p class="button-text">View Github</p>
+              </div>
+            </button>
+            <button class="myGov-demo-button" onclick="window.open('https://youtu.be/lm50RP4OufU?si=Ye_12d3gJGLk7b1x');"">
+              <div class="button-text-container">
+                <i class="fa-solid fa-laptop-code"></i>
+                <p class="button-text">View Demo</p>
+              </div>
+            </button>
+          </div>
+        </div>
+      </div>
+
       <!--Brain 3D Reconstruction Project -->
       <div class="focus-pal-container">
         <div class="project-text">
