Added X-Ray Musculoskeletal Condition Classification Poject

--- a/html/projects.html
+++ b/html/projects.html
@@ -24,6 +24,31 @@
     <h1 class="coding-projects-heading"> Coding Projects </h1>
 
     <section>
+      <!--XRay Classification Project -->
+      <div class="insight-container">
+        <div class="project-text">
+          <p class="insight-heading">X-Ray Musculoskeletal Condition Classification</p>
+          <p class="project-description"> This project performs binary classification of x-ray images to detect if abnormal musculoskeletal 
+            conditions are present using several Python libraries including <span class="insight-concepts">Pytorch, OpenCV, PIL, Scikit-Learn,
+              Pandas, Numpy, Matplotlib, and SciPy</span>. We compared several preprocessing techniques (PCA, Normalize, 
+              Lapclacian Filter, Unsharp Mask, Bilateral Filter, rotation, etc.) and models (LDA, QDA, CNNs, CNNs with dropout and
+              layer normalization).
+          </p>
+          <div class="project-button-container">
+            <button  class="insight-github-button" onclick="window.open('https://github.com/TiffanyN22/COEN-Lab-Projects/blob/main/COEN-140-Machine-Learning/Final%20Project.ipynb');">
+              <div class="button-text-container">
+                <i class="fa-brands fa-github"></i>
+                <p class="button-text">View Github</p>
+              </div>
+            </button>
+          </div>
+        </div>
+        <div class="focus-pal-image-container">
+          <img class="img1" src="../images/projects/Xray.png">
+          <img class="img2" src="../images/projects/XrayResult.png">
+        </div>
+      </div>
+
       <!--Ascend Project -->
       <div class="myGov-container">
         <div class="app-container">
