Updated experience page with work, research, and extracurricular involvement

--- a/html/projects.html
+++ b/html/projects.html
@@ -18,7 +18,7 @@
     <nav class="navbar"> 
       <a class="navbar-item" href="../index.html"> Home </a>
       <a class="navbar-item" href="projects.html"> Coding Projects </a>
-      <a class="navbar-item" href="extracurriculars.html"> Extracurricular Projects </a>
+      <a class="navbar-item" href="extracurriculars.html"> Work Experience </a>
     </nav>
     
     <h1 class="coding-projects-heading"> Coding Projects </h1>
