Added broncosec instagram button

--- a/html/extracurriculars.html
+++ b/html/extracurriculars.html
@@ -535,6 +535,9 @@
                     <br> <br>
                     Currently in my junior year, I am a <b>PR Chair</b>, where I created flyers, send out newsletters, and update our instagram to advertise weekly events. I also developed challenges for BroncoCTF.
                   </p>
+                  <button class="btn btn-primary-magenta btn-xl text-uppercase" onclick="window.open('https://www.instagram.com/scubroncosec/');" type="button">
+                    View Broncosec Instagram
+                  </button>
                 </div>
               </div>
             </div>
