Added Careful Cafe project

--- a/html/projects.html
+++ b/html/projects.html
@@ -24,6 +24,34 @@
     <h1 class="coding-projects-heading"> Coding Projects </h1>
 
     <section>
+      <!-- Careful Cafe -->
+      <div class="EtCoW-container">
+        <img class="EtCoW-image" src="../images/projects/CarefulCafe.png">
+        <div class="project-text">
+          <p class="EtCoW-heading">Careful Cafe</p>
+          <p class="project-description">Careful Cafe is a 2D Game created in <span class="EtCoW-concepts">
+            Unity</span> using <span class="EtCoW-concepts">C#</span> that teaches users about allergy awareness and 
+            accommodating dietary restrictions through minigames and dialogue advice. This project was created as part of 
+            Hack for Humanity 2025, and I was personally in charge of developing the dialogue box, kitchen interactions, mixing minigame, and 
+            baking minigame.
+          </p>
+          <div class="project-button-container">
+            <button  class="EtCoW-github-button" onclick="window.open('https://github.com/karabarrese/CarefulCafe');">
+              <div class="button-text-container">
+                <i class="fa-brands fa-github"></i>
+                <p class="button-text">View Github</p>
+              </div>
+            </button>
+            <button class="EtCoW-demo-button" onclick="window.open('https://youtu.be/V9kAfjx_Emo?si=WFR6WlYwj6isfn3z');"">
+              <div class="button-text-container">
+                <i class="fa-solid fa-laptop-code"></i>
+                <p class="button-text">View Demo</p>
+              </div>
+            </button>
+          </div>
+        </div>
+      </div>
+
       <!--XRay Classification Project -->
       <div class="insight-container">
         <div class="project-text">
